started extracting methods